# AutoWhiskLozyMMO

./: .gitignore  StartDev.vbs  StartTool.vbs  build-frontend.bat  build.bat  clear-cache.bat  dev-server.js  dev.bat  install-pkg.bat  publish-release.ps1  publish_release.bat  publish_release.ps1  start-dev.ps1  start-frontend.bat  start-tauri-dev.bat
.agent/rules/: Mode_Clasifier_Prompt.md  Spec_Prompt-2.md  Spec_Prompt.md  Vibe_Prompt-2.md  Vibe_Prompt.md
Extension/: background.js  manifest.json  popup.html  popup.js
Interface/: build_ui.bat
Interface/aUTOwhisK/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
Interface/aUTOwhisK/src/: App.tsx  bridge.ts  browser-cli.ts  browser-pool.ts  main.ts  (+1 more)
Interface/tech-&-ai/: App.tsx  README.md  index.css  index.html  metadata.json  package-lock.json  package.json  vite.config.ts
Logic tool/Logic AutoWhisk/: WhiskModels.cs  WhiskRunner.cs  WhiskService.cs  whisk_logic.rs  whisk_session.rs
Logic tool/Logic Bend your knees/: ChainLogic.cs
Logic tool/Logic History/: HistoryEntry.cs
Logic tool/Logic Split Prompt/: PromptSplitterLogic.cs
ToolApp/: AccountManager.cs  MainForm.cs  Program.cs  ToolApp.csproj  UpdateManager.cs
ToolApp/wwwroot/: index.html
frontend-dist/: index.html
frontend-dist/assets/: index-BX2Pb132.js  index-BaRWQcAe.js  index-BfnZOO-d.css  index-C-yTfv25.css  index-FYyo5I85.js
src-tauri/: Cargo.toml  convert_icon.ps1  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: accounts.rs  main.rs  whisk.rs
(+28 files in other folders)
